--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -4,8 +4,13 @@
 	</head>
 	<body>
 		<h1>Your To-Do list</h1>
-		<input id="id_new_item" placeholder= "Enter a To-Do item" />
+		<form method="POST">
+			<input name="item_next" id="id_new_item" placeholder= "Enter a To-Do item" />
+			{% csrf_token %}
+		</form>
+
 		<table id="id_list_table">
+			<tr><td>1: {{ new_item_text }}</td></tr>
 		</table>
 	</body>
 </html>
