--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -5,12 +5,14 @@
 	<body>
 		<h1>Your To-Do list</h1>
 		<form method="POST">
-			<input name="item_next" id="id_new_item" placeholder= "Enter a To-Do item" />
+			<input name="item_text" id="id_new_item" placeholder= "Enter a To-Do item" />
 			{% csrf_token %}
 		</form>
 
 		<table id="id_list_table">
-			<tr><td>1: {{ new_item_text }}</td></tr>
+			{% for item in items %}
+				<tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+			{% endfor %}
 		</table>
 	</body>
 </html>
