--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,4 +1,18 @@
-<form method="POST" action="/lists/new">
-	<input name="item_text" id="id_new_item" placeholder= "Enter a To-Do item" />
-	{% csrf_token %}
-</form>
+<html>
+	<head>
+		<title>To-Do lists</title>
+	</head>
+	<body>
+		<h1>Your To-Do list</h1>
+		<form method="POST" action="/lists/{{ list.id }}/add_item">
+			<input name="item_text" id="id_new_item" placeholder= "Enter a To-Do item" />
+			{% csrf_token %}
+		</form>
+
+		<table id="id_list_table">
+			{% for item in list.item_set.all %}
+				<tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+			{% endfor %}
+		</table>
+	</body>
+</html>
