--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -19,6 +19,11 @@
 								placeholder="Enter a To-Do item" 
 							/>
 							{% csrf_token %}
+							{% if error %}
+								<div class="form-group has-error">
+										<span class="help-block">{{ error }}</span>
+								</div>
+							{% endif %}
 						</form>
 					</div>
 				</div>
